<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    android:padding="5dp"
    tools:context=".navigation.PerfilFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="563dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/drawable_bio"
        android:elevation="2dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewPerfil"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            android:elevation="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/padrao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextMultiLineBio"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/drawable_bio"
            android:elevation="6dp"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/biohint"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:paddingStart="10dp"
            android:paddingTop="3dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewPerfil" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:elevation="8dp"
            android:gravity="center"
            app:boxBackgroundMode="none"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_drawable"
                android:hint="@string/hintNome"
                android:inputType="textPersonName"
                android:maxLength="25"
                android:maxLines="1"
                android:paddingTop="10dp"
                android:textColor="@color/black"
                android:textColorHint="#0288D1"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:elevation="8dp"
            android:gravity="center"
            app:boxBackgroundMode="none"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextInteresses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_drawable"
                android:hint="@string/cidadeHint"
                android:inputType="textPersonName"
                android:maxLength="25"
                android:maxLines="1"
                android:paddingTop="10dp"
                android:textColor="@color/black"
                android:textColorHint="#0288D1"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="4dp"
            android:background="@android:color/transparent"
            android:elevation="8dp"
            android:gravity="center"
            app:boxBackgroundMode="none"
            app:layout_constraintBottom_toTopOf="@+id/button_salvarPerfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextVegan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_drawable"
                android:hint="@string/tempoDeVeganHint"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingTop="16dp"
                android:textColor="@color/black"
                android:textColorHint="#0288D1"
                android:textSize="15sp"
                tools:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_salvarPerfil"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="80dp"
            android:backgroundTint="@color/purple_700"
            android:elevation="8dp"
            android:text="@string/textBtn"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="#B2DBF1" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>